force-app/main/default/objects/LoggerConfig__mdt/LoggerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Stores configuration for logging. Logging is generally enabled, if at least one active rule exists.</description>
    <label>Logger Configuration</label>
    <pluralLabel>Logger Configurations</pluralLabel>
</CustomObject>