force-app/main/default/objects/LoggerConfig__mdt/fields/AdditionalClassNames__c.field-meta.xml
<CustomField>
    <fullName>AdditionalClassNames__c</fullName>
    <description>Additional Classes to write logs for.</description>
    <inlineHelpText>Works only if Save Behaviour is set to &#39;For Classes&#39;. Additional Classes to write logs for.</inlineHelpText>
    <label>Additional Class Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>