force-app/main/default/objects/LoggerConfig__mdt/fields/ClassNames__c.field-meta.xml
<CustomField>
    <fullName>ClassNames__c</fullName>
    <description>Classes to write logs for.</description>
    <inlineHelpText>Works only if Logs To Save is set to &#39;For Classes&#39;. Classes to write logs for. If 255 characters are not enough, use &#39;Additional Classes to Log&#39;</inlineHelpText>
    <label>Apex Classes to Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>