force-app/main/default/objects/LoggerConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If at least one active rule exists, logging is enabled.</description>
    <inlineHelpText>Disable if you want to ignore this rule. If all rules are de-activated, logging is disabled.</inlineHelpText>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>