force-app/main/default/objects/LoggerConfig__mdt/fields/LogMessagesOnly__c.field-meta.xml
<CustomField>
    <fullName>LogMessagesOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Live View. Also, only one DebugEntry per Logger.log('message') or Logger.logException will be saved, push() and pop() will be ignored.</description>
    <inlineHelpText>Enables Live View. Also, only one DebugEntry per Logger.log('message') or Logger.logException will be saved, push() and pop() will be ignored.</inlineHelpText>
    <label>Log Messages Only / Live View</label>
    <type>Checkbox</type>
</CustomField>