force-app/main/default/objects/LoggerConfig__mdt/fields/LogsToSave__c.field-meta.xml
<CustomField>
    <fullName>LogsToSave__c</fullName>
    <description>Determines whether all logs, exception logs only or only logs for users with custom permission &#39;enableLogging&#39;</description>
    <inlineHelpText>Determines whether all logs, exception logs only or only logs for users with custom permission &#39;enableLogging&#39;</inlineHelpText>
    <label>Logs to save</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>AllLogs</fullName>
                <label>All Logs</label>
            </value>
            <value>
                <fullName>ExceptionsOnly</fullName>
                <label>Exceptions Only</label>
            </value>
            <value>
                <fullName>UserLogs</fullName>
                <label>User Logs</label>
            </value>
            <value>
                <fullName>For Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>