force-app/main/default/objects/LoggerConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>IsActive__c</columns>
    <columns>LogsToSave__c</columns>
    <columns>ClassNames__c</columns>
    <columns>AdditionalClassNames__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>